--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	electroniccats/MPU6050@^1.3.0
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
 	mikalhart/TinyGPSPlus@^1.0.3
+	wnatth3/WiFiManager@^2.0.16-rc.2
